fixed build xml

--- a/202/build.xml
+++ b/202/build.xml
@@ -4,7 +4,7 @@
     <property name="build-dir" value="${basedir}/202/build" />
     <property name="src-dir" value="${basedir}" />
     <property name="TARGETNAME" value="ebay" />
-    <property name="TARGETBRANCH" value="develop" />
+    <property name="TARGETBRANCH" value="${env.GIT_BRANCH}" />
     <property name="TARGETVERSION" value="2.1.5" />
 
     <target name="build" depends="build-common,package-zip,psvalidator" />
@@ -14,13 +14,13 @@
     <target name="package-zip" depends="build-common" description="Create ZIP package">
         <echo>Create ZIP package</echo>
 
-        <exec executable="${PACKAGE_ZIP_PATH}" failonerror="true">
+        <exec executable="${env.TOTBUILDER_PATH}tot-package.sh" failonerror="true">
             <arg value="prod" />
             <arg value="${TARGETNAME}" />
             <arg value="${TARGETBRANCH}" />
             <arg value="${TARGETVERSION}" />
-            <arg value="${BUILD_TAG}" />
             <arg value="${env.BUILD_TAG}" />
+            <arg value="${env.GIT_URL}" />
         </exec>
     </target>
 
@@ -28,9 +28,10 @@
         <echo>Create ZIP package</echo>
 
         <exec executable="php" failonerror="true">
-            <arg value="/var/www/totbuilder/bin/console"/>
+            <arg value="${env.TOTBUILDER_PATH}console"/>
             <arg value="psvalidator:validate"/>
             <arg value="${env.WORKSPACE}/202/build/packages/v${TARGETVERSION}-prod-${TARGETNAME}.zip"/>
+            <arg value="${env.BUILD_NUMBER}"/>
         </exec>
     </target>
 
