--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -60,6 +60,9 @@ jobs:
             matrix:
                 presta-versions: ['1.7.4.0', 'latest']
         steps:
+            - name: Move composer
+              run: mv ebay.composer.json composer.json
+
             - name: Checkout
               uses: actions/checkout@v2.0.0
 
@@ -78,6 +81,7 @@ jobs:
                   key: php-composer-cache
 
             - run: composer update
+            
 
             # Docker images prestashop/prestashop may be used, even if the shop remains uninstalled
             - name: Pull PrestaShop files (Tag ${{ matrix.presta-versions }})
