--- a/202/phpstan/phpstan.neon
+++ b/202/phpstan/phpstan.neon
@@ -5,13 +5,17 @@ parameters:
   paths:
   # We consider that the extension file will be stored the folder test/phpstan
   # From Phpstan 0.12, paths are relative to the .neon file.
-      - ../../../../var/cache/prod/class_index.php
-      - ../../../../var/cache/prod/class_stub.php
       - ../../ebay.php
       - ../../classes
       - ../../services
       - ../../controllers
       - ../../upgrade
+
+  scanDirectories:
+        - ../../../../classes
+  scanFiles:
+        - ../../../../var/cache/prod/class_index.php
+        - ../../../../var/cache/prod/class_stub.php
 
   reportUnmatchedIgnoredErrors: false
   level: 1
