--- a/202/phpstan/phpstan.neon
+++ b/202/phpstan/phpstan.neon
@@ -5,12 +5,22 @@ parameters:
   paths:
   # We consider that the extension file will be stored the folder test/phpstan
   # From Phpstan 0.12, paths are relative to the .neon file.
-      - ../../../../var/cache/prod/class_index.php
-      - ../../../../var/cache/prod/class_stub.php
       - ../../ebay.php
       - ../../classes
+      - ../../services
       - ../../controllers
       - ../../upgrade
 
+  scanDirectories:
+        - ../../../../classes
+        - ../../../../config
+  scanFiles:
+        - ../../../../var/cache/prod/class_index.php
+        - ../../../../var/cache/prod/class_stub.php
+        - ../../config_prod.php
+  ignoreErrors:
+  #PHPStan doesn't understand our method_exists() safeguards.
+      - '#Call to an undefined static method Module::hookExec\(\)\.#'
+
   reportUnmatchedIgnoredErrors: false
-  level: 0
+  level: 1
